--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       overflow: hidden;
       height: 100vh;
       font-family: Arial, sans-serif;
+      background-color: #1a1a1a;
       background-image: url('Fondo.jpg'); /* Fondo inicial */
       background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
       background-position: center; /* Centra la imagen de fondo */
@@ -222,7 +223,7 @@
   </div>
 
   <audio id="musica" loop>
-    <source src="musica_halloween.mp3" type="audio/mpeg">
+    <source src="musica01.mp3" type="audio/mpeg">
   </audio>
 
   <script>
