--- a/index.html
+++ b/index.html
@@ -171,45 +171,45 @@
 
   <!-- Carrusel de fotos -->
   <div class="carrusel" id="carrusel">
-    <img src="Fotos MEDACALABAZA/01.jpg" class="active">
-    <img src="Fotos MEDACALABAZA/02.jpg">
-    <img src="Fotos MEDACALABAZA/03.jpg">
-    <img src="Fotos MEDACALABAZA/04.jpg">
-    <img src="Fotos MEDACALABAZA/05.jpg">
-    <img src="Fotos MEDACALABAZA/06.jpg">
-    <img src="Fotos MEDACALABAZA/07.jpg">
-    <img src="Fotos MEDACALABAZA/08.jpg">
-    <img src="Fotos MEDACALABAZA/09.jpg">
-    <img src="Fotos MEDACALABAZA/10.jpg">
-    <img src="Fotos MEDACALABAZA/11.jpg">
-    <img src="Fotos MEDACALABAZA/12.jpg">
-    <img src="Fotos MEDACALABAZA/13.jpg">
-    <img src="Fotos MEDACALABAZA/14.jpg">
-    <img src="Fotos MEDACALABAZA/15.jpg">
-    <img src="Fotos MEDACALABAZA/16.jpg">
-    <img src="Fotos MEDACALABAZA/17.jpg">
-    <img src="Fotos MEDACALABAZA/18.jpg">
-    <img src="Fotos MEDACALABAZA/19.jpg">
-    <img src="Fotos MEDACALABAZA/20.jpg">
-    <img src="Fotos MEDACALABAZA/21.jpg">
-    <img src="Fotos MEDACALABAZA/22.jpg">
-    <img src="Fotos MEDACALABAZA/23.jpg">
-    <img src="Fotos MEDACALABAZA/24.jpg">
-    <img src="Fotos MEDACALABAZA/25.jpg">
-    <img src="Fotos MEDACALABAZA/26.jpg">
-    <img src="Fotos MEDACALABAZA/27.jpg">
-    <img src="Fotos MEDACALABAZA/28.jpg">
-    <img src="Fotos MEDACALABAZA/29.jpg">
-    <img src="Fotos MEDACALABAZA/30.jpg">
-    <img src="Fotos MEDACALABAZA/31.jpg">
-    <img src="Fotos MEDACALABAZA/32.jpg">
-    <img src="Fotos MEDACALABAZA/33.jpg">
-    <img src="Fotos MEDACALABAZA/34.jpg">
-    <img src="Fotos MEDACALABAZA/35.jpg">
-    <img src="Fotos MEDACALABAZA/36.jpg">
-    <img src="Fotos MEDACALABAZA/37.jpg">
-    <img src="Fotos MEDACALABAZA/38.jpg">
-    <img src="Fotos MEDACALABAZA/39.jpg">
+    <img src="01.jpg" class="active">
+    <img src="02.jpg">
+    <img src="03.jpg">
+    <img src="04.jpg">
+    <img src="05.jpg">
+    <img src="06.jpg">
+    <img src="07.jpg">
+    <img src="08.jpg">
+    <img src="09.jpg">
+    <img src="10.jpg">
+    <img src="11.jpg">
+    <img src="12.jpg">
+    <img src="13.jpg">
+    <img src="14.jpg">
+    <img src="15.jpg">
+    <img src="16.jpg">
+    <img src="17.jpg">
+    <img src="18.jpg">
+    <img src="19.jpg">
+    <img src="20.jpg">
+    <img src="21.jpg">
+    <img src="22.jpg">
+    <img src="23.jpg">
+    <img src="24.jpg">
+    <img src="25.jpg">
+    <img src="26.jpg">
+    <img src="27.jpg">
+    <img src="28.jpg">
+    <img src="29.jpg">
+    <img src="30.jpg">
+    <img src="31.jpg">
+    <img src="32.jpg">
+    <img src="33.jpg">
+    <img src="34.jpg">
+    <img src="35.jpg">
+    <img src="36.jpg">
+    <img src="37.jpg">
+    <img src="38.jpg">
+    <img src="39.jpg">
     <!-- Añade más imágenes aquí -->
 
     <button class="boton left" onclick="cambiarFoto(-1)">&#10094;</button>
