--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
   <!-- Carrusel de fotos -->
   <div class="carrusel" id="carrusel">
-    <img src="01.jpg" class="active">
+    <img src="01.JPG" class="active">
     <img src="02.jpg">
     <img src="03.jpg">
     <img src="04.jpg">
@@ -194,22 +194,22 @@
     <img src="21.jpg">
     <img src="22.jpg">
     <img src="23.jpg">
-    <img src="24.jpg">
-    <img src="25.jpg">
-    <img src="26.jpg">
-    <img src="27.jpg">
-    <img src="28.jpg">
-    <img src="29.jpg">
-    <img src="30.jpg">
-    <img src="31.jpg">
-    <img src="32.jpg">
-    <img src="33.jpg">
-    <img src="34.jpg">
-    <img src="35.jpg">
-    <img src="36.jpg">
-    <img src="37.jpg">
-    <img src="38.jpg">
-    <img src="39.jpg">
+    <img src="24.JPG">
+    <img src="25.JPG">
+    <img src="26.JPG">
+    <img src="27.JPG">
+    <img src="28.JPG">
+    <img src="29.JPG">
+    <img src="30.JPG">
+    <img src="31.JPG">
+    <img src="32.JPG">
+    <img src="33.JPG">
+    <img src="34.JPG">
+    <img src="35.JPG">
+    <img src="36.JPG">
+    <img src="37.JPG">
+    <img src="38.JPG">
+    <img src="39.JPG">
     <!-- Añade más imágenes aquí -->
 
     <button class="boton left" onclick="cambiarFoto(-1)">&#10094;</button>
