--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
   <!-- Carrusel de fotos -->
   <div class="carrusel" id="carrusel">
-    <img src="01.JPG" class="active">
+    <img src="01.JPG" >
     <img src="02.jpg">
     <img src="03.jpg">
     <img src="04.jpg">
@@ -210,7 +210,6 @@
     <img src="37.JPG">
     <img src="38.JPG">
     <img src="39.JPG">
-    <!-- Añade más imágenes aquí -->
 
     <button class="boton left" onclick="cambiarFoto(-1)">&#10094;</button>
     <button class="boton right" onclick="cambiarFoto(1)">&#10095;</button>
