--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Halloween Sorpresa</title>
+  <title>MEDACALABAZA</title>
   <style>
     /* Estilos generales */
     body, html {
@@ -171,7 +171,7 @@
 
   <!-- Carrusel de fotos -->
   <div class="carrusel" id="carrusel">
-    <img src="01.JPG" >
+    <img src="01.jpg" class="active">
     <img src="02.jpg">
     <img src="03.jpg">
     <img src="04.jpg">
